# slipstream-rust

./: Cargo.toml  README.md
.github/workflows/: release.yml
slipstream-client/: Cargo.toml
slipstream-client/src/: dns_bridge.rs  handler.rs  main.rs  tquic_loop.rs
slipstream-core/: Cargo.toml
slipstream-core/src/: codec.rs  config.rs  dns_socket.rs  lib.rs
slipstream-server/: Cargo.toml
slipstream-server/src/: dns_bridge.rs  handler.rs  main.rs  tquic_loop.rs
