[workspace]
members = [
    "slipstream-core",
    "slipstream-client",
    "slipstream-server",
]
resolver = "2"

[workspace.dependencies]
# Async runtime (Tokio for TCP accept side only; TQUIC runs on its own mio thread)
tokio = { version = "1", features = ["full"] }

# QUIC: TQUIC replaces quinn+rustls entirely
tquic = "1"
bytes = "1"


# mio for the TQUIC event loop
mio = { version = "1", features = ["net", "os-poll"] }

# TLS certs for --self-signed mode (TQUIC uses its own TLS, we still need rcgen for cert gen)
rcgen = { version = "0.13", features = ["ring"] }

# DNS codec (unchanged)
data-encoding = "2"
hickory-proto = "0.24"

# CLI, logging, utils
clap    = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand    = "0.8"
anyhow  = "1"
thiserror = "2"
socket2   = { version = "0.5", features = ["all"] }
