[package]
name = "slipstream-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "slipstream-server"
path = "src/main.rs"

[dependencies]
slipstream-core = { path = "../slipstream-core" }
tokio = { workspace = true }
quinn = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
rcgen = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
data-encoding = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
rand = { workspace = true }
socket2 = { workspace = true }
